--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
     *{
     margin: 0;
     padding: 0;
@@ -64,6 +65,7 @@ input::placeholder {
 .submit:hover{
     background-color: rgb(161, 160, 160);
 }
+        </style>
 </head>
 
 <body>
